--- a/PharmacyInventoryManagementSystem/PharmacyInventoryManagementSystem.csproj
+++ b/PharmacyInventoryManagementSystem/PharmacyInventoryManagementSystem.csproj
@@ -10,6 +10,11 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
+    <None Remove="Pages\Medecines\" />
+    <None Remove="Pages\Suppliers\" />
+    <None Remove="Pages\Users\" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
   </ItemGroup>
 
@@ -24,5 +29,10 @@
 
   <ItemGroup>
     <Content Remove="wwwroot\lib\bootstrap\dist\css\bootstrap.min.css.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\Medecines\" />
+    <Folder Include="Pages\Suppliers\" />
+    <Folder Include="Pages\Users\" />
   </ItemGroup>
 </Project>
